--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
                         <div class="u-container-layout u-valign-middle">
                           <h2 class="u-align-left u-text u-text-3">Cerberus.aic</h2>
                           <p class="u-align-left u-text u-text-4"> Wikidot bot for Russian SCP Branch</p>
-                          <a href="https://github.com/MrNereof/Cerberus.aic" class="github_button u-align-left u-border-none u-btn u-button-style u-grey-70 u-hover-grey-80 u-btn-3" target="_blank"> &nbsp;Github</a>
+                          <a href="https://github.com/MrNereof/Cerberus.aic" class="u-align-left u-border-none u-btn u-button-style u-grey-70 u-hover-grey-80 u-btn-3" target="_blank"> &nbsp;Github</a>
                         </div>
                       </div>
                     </div>
