--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 And it is my personal website!">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Home - MrNereof</title>
+    <link rel="stylesheet" href="base.css" media="screen">
     <link rel="stylesheet" href="style.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
@@ -36,16 +37,13 @@ And it is my personal website!">
     <meta name="theme-color" content="#478ac9">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page-title="Home - MrNereof" class="u-body u-xl-mode"><header class="u-align-center u-clearfix u-custom-color-1 u-header u-sticky u-sticky-f992" id="sec-e405" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <a class="u-hidden-sm u-hidden-xs u-image u-logo u-image-1" data-image-width="618" data-image-height="541">
-          <img src="images/dead.png" class="u-logo-image u-logo-image-1">
-        </a>
-        <div class="u-align-center-sm u-align-center-xs u-container-style u-group u-group-1">
-          <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs">
-            <h1 class="u-align-center u-text u-text-1">MrNereof</h1>
-            <h3 class="u-align-center u-headline u-text u-text-default u-text-2">
+  <body data-home-page-title="Home - MrNereof" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode"><header class="u-align-center u-clearfix u-custom-color-1 u-header u-sticky u-sticky-f992" id="sec-e405" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-align-left u-clearfix u-sheet u-sheet-1">
+        <div class="u-align-center u-container-style u-group u-group-1">
+          <div class="u-container-layout u-valign-middle">
+            <h1 class="u-text u-text-default u-text-1">MrNereof</h1>
+            <h5 class="u-headline u-hidden-xs u-text u-text-default u-text-2">
               <a href="/">My personal website</a>
-            </h3>
+            </h5>
           </div>
         </div>
       </div><style class="u-sticky-style" data-style-id="f992">.u-sticky-fixed.u-sticky-f992, .u-body.u-sticky-fixed .u-sticky-f992 {
@@ -56,7 +54,7 @@ box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
         <div class="u-align-center u-container-style u-group u-group-1">
           <div class="u-container-layout u-valign-middle">
             <h1 class="u-align-center u-text u-text-default u-title u-text-1">About me</h1>
-            <p class="u-large-text u-text u-text-variant u-text-2">I am a programmer, writer and (also) a good person. Recently, I have been an active member of the SCP Foundation community.<br> And it is my personal website!
+            <p class="u-large-text u-text u-text-variant u-text-2">I am a programmer, writer and (also) a good person. Recently, I have been an active member of the SCP Foundation community.<br> And it is ​my personal website!
             </p>
           </div>
         </div>
@@ -158,7 +156,7 @@ box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
             <div class="u-container-style u-group u-white u-group-1">
               <div class="u-container-layout u-container-layout-1">
                 <h2 class="u-text u-text-default u-text-1">SCP-1344-RU</h2>
-                <p class="u-text u-text-2">dado to expand your business and make dado delivery for tablets and stuff. dados hamsters run fast and give. this is a very good delivery. stop hamster don't eat these pillawfafafwafafffsfafwafafafagzddbdzbdzbzdbdzbdzbd</p>
+                <p class="u-text u-text-2">dado to expand your business and make dado delivery for tablets and stuff. Dado's hamsters run fast and give. this is a very good delivery. stop hamster don't eat these pillawfafafwafafffsfafwafafafagzddbdzbdzbzdbdzbdzbd</p>
                 <a href="http://scpfoundation.net/scp-1344-ru" class="u-border-2 u-border-grey-70 u-btn u-button-style u-grey-70 u-hover-grey-80 u-text-body-alt-color u-text-hover-white u-btn-1" target="_blank">learn more</a>
               </div>
             </div>
@@ -201,11 +199,11 @@ box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
                 </div>
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout u-valign-middle u-container-layout-2">
+                <div class="u-container-layout u-container-layout-2">
                   <div class="u-social-icons u-spacing-10 u-social-icons-1">
                     <a class="u-social-url" target="_blank" data-type="Github" title="Github" href="https://github.com/MrNereof"><span class="u-file-icon u-icon u-social-github u-social-icon u-icon-1"><img src="images/github.png" alt=""></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Custom" title="Discord" href="https://discord.com/users/684667289668550722"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-black u-icon-2"><img src="images/discord.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Discord" href="https://discord.com/users/684667289668550722"><span class="u-file-icon u-icon u-social-custom u-social-icon u-icon-2"><img src="images/discord.png" alt=""></span>
                     </a>
                     <a class="u-social-url" target="_blank" data-type="Telegram" title="Telegram" href="https://t.me/MrNereof"><span class="u-file-icon u-icon u-social-icon u-social-telegram u-icon-3"><img src="images/telegram.png" alt=""></span>
                     </a>
