--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@ And it is my personal website!">
   </head>
   <body data-home-page-title="Home - MrNereof" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode"><header class="u-align-center u-clearfix u-custom-color-1 u-header u-sticky u-sticky-f992" id="sec-e405" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""><div class="u-align-left u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-container-style u-group u-group-1">
-          <div class="u-container-layout u-valign-middle">
-            <h1 class="u-text u-text-default u-text-1">MrNereof</h1>
-            <h5 class="u-headline u-hidden-xs u-text u-text-default u-text-2">
-              <a href="/">My personal website</a>
-            </h5>
+          <div class="u-container-layout">
+            <h1 class="u-text u-text-1">MrNereof</h1>
+            <h5 class="u-hidden-xs u-text u-text-2">My personal website</h5>
           </div>
         </div>
       </div><style class="u-sticky-style" data-style-id="f992">.u-sticky-fixed.u-sticky-f992, .u-body.u-sticky-fixed .u-sticky-f992 {
 box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
 }</style></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1280" data-image-height="852" id="sec-e7ce">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-center u-container-style u-group u-group-1">
           <div class="u-container-layout u-valign-middle">
             <h1 class="u-align-center u-text u-text-default u-title u-text-1">About me</h1>
@@ -129,7 +127,7 @@ box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
                       </div>
                     </div>
                   </div>
-                  <div class="u-container-style u-hidden-sm u-hidden-xs u-image u-image-contain u-layout-cell u-size-30 u-image-1" data-image-width="595" data-image-height="385">
+                  <div class="u-container-style u-hidden-sm u-hidden-xs u-image u-image-contain u-layout-cell u-size-30 u-image-1" data-image-width="595" data-image-height="385" data-animation-name="fadeIn" data-animation-duration="2000" data-animation-direction="Right">
                     <div class="u-container-layout u-valign-middle u-container-layout-6"></div>
                   </div>
                 </div>
