--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
       <div class="u-carousel-inner" role="listbox">
         <div class="u-active u-carousel-item u-clearfix u-grey-70 u-section-6-1">
           <div class="u-clearfix u-sheet u-sheet-1">
-            <img class="u-align-left u-image u-image-1" data-image-width="682" data-image-height="384" src="images/scp-1344-ru.png">
-            <div class="u-container-style u-group u-white u-group-1">
+            <img class="u-align-left u-image u-image-1" data-image-width="682" data-image-height="384" src="images/scp-1344-ru.png" data-animation-name="fadeIn" data-animation-duration="1500" data-animation-direction="Left">
+            <div class="u-container-style u-group u-white u-group-1" data-animation-name="fadeIn" data-animation-duration="1500" data-animation-direction="Right">
               <div class="u-container-layout u-container-layout-1">
                 <h2 class="u-text u-text-default u-text-1">SCP-1344-RU</h2>
                 <p class="u-text u-text-2">dado to expand your business and make dado delivery for tablets and stuff. Dado's hamsters run fast and give. this is a very good delivery. stop hamster don't eat these pillawfafafwafafffsfafwafafafagzddbdzbdzbzdbdzbdzbd</p>
