--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ And it is my personal website!">
       </div><style class="u-sticky-style" data-style-id="f992">.u-sticky-fixed.u-sticky-f992, .u-body.u-sticky-fixed .u-sticky-f992 {
 box-shadow: 0px 2px 0px 0px rgba(51,51,51,0) !important
 }</style></header>
-    <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1280" data-image-height="852" id="sec-e7ce">
+    <section class="skrollable u-align-center u-clearfix u-image u-parallax u-shading u-section-1" src="" data-image-width="1280" data-image-height="852" id="sec-e7ce">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-center u-container-style u-group u-group-1">
           <div class="u-container-layout u-valign-middle">
