New minimalistic site design

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><title>MrNereof</title><link rel=icon href=data:,><style>body{padding:32px;font-weight:bold;background:#222;color:#fefefe;font-size:18px;font-family: 'Andale Mono', 'Courier New', Courier, monospace;}a{color: #8d8989}a:hover{color: #222;background: #8d8989}pre{white-space:pre-wrap}</style>
+<!DOCTYPE html><title>MrNereof</title><link rel=icon href=data:,><style>body{padding:32px;font-weight:bold;background:#222;color:#fefefe;font-size:18px;}a{color: #8d8989}a:hover{color: #222;background: #8d8989}pre{white-space:pre-wrap}</style>
 <pre>Idk what I should write here but you can check my <a target="_blank" href=//github.com/MrNereof>Github</a> or contact me in <a target="_blank" href="https://t.me/MrNereof">Telegram</a> or Discord (MrNereof#3953)
 ............
 ............
