New minimalistic site design

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         white-space: pre-wrap
     }
 </style>
-<pre>Idk what I should write here but you can check my <a href="g">Github</a> or contact me in <a href="t">Telegram</a> or Discord (MrNereof#3953)
+<pre>Idk what I should write here but you can check my <a href="g">Github</a> or contact me on <a href="t">Telegram</a> or Discord (MrNereof#3953)
 ............
 ............
 .............      .';coddddoc;.
