New minimalistic site design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctypehtml>
 <title>MrNereof</title>
 <link rel=icon href=data:,>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     body{
         padding: 32px;
@@ -18,8 +19,15 @@
     pre{
         white-space: pre-wrap
     }
+    @media only screen and (max-width: 767px) {
+        /* For mobile phones: */
+        code {
+            display: none;
+        }
+    }
 </style>
 <pre>Idk what I should write here but you can check my <a href="g">Github</a> or contact me on <a href="t">Telegram</a> or Discord (MrNereof#3953)
+<code>
 ............
 ............
 .............      .';coddddoc;.
@@ -46,4 +54,5 @@
 ccccccllllllllllllllllllolllllllooollllllooooooooooo
 llllllllllllllllooooooooooooooooollllooooollooooooll
 lllllllllllloooooooooloooooooolllloooolloooooooooloo
+</code>
 </pre>
