New minimalistic site design

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
     }
 </style>
-<pre>Idk what I should write here but you can check my <a href="g">Github</a> or contact me on <a href="t">Telegram</a> or Discord (MrNereof#3953)
+<pre>Idk what I should write here but you can check my <a target="_blank" href="g">Github</a> or contact me on <a target="_blank" href="t">Telegram</a> or Discord (MrNereof#3953)
 <code>
 ............
 ............
