New minimalistic site design

--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
     pre{
         white-space: pre-wrap
     }
+    #image-small {
+        display: none;
+    }
     @media only screen and (max-width: 767px) {
         /* For mobile phones: */
-        code {
+        #image-big {
             display: none;
+        }
+
+        #image-small {
+            display: block;
         }
     }
 </style>
-<pre>Idk what I should write here but you can check my <a target="_blank" href="g">Github</a> or contact me on <a target="_blank" href="t">Telegram</a> or Discord (MrNereof#3953)<code>
+<pre>Idk what I should write here but you can check my <a target="_blank" href="g">Github</a> or contact me on <a target="_blank" href="t">Telegram</a> or Discord (MrNereof#3953)<span id="image-big">
 ............
 ............
 .............      .';coddddoc;.
@@ -53,5 +60,12 @@
 ccccccllllllllllllllllllolllllllooollllllooooooooooo
 llllllllllllllllooooooooooooooooollllooooollooooooll
 lllllllllllloooooooooloooooooolllloooolloooooooooloo
-</code>
+</span><span id="image-small">
+  _____
+ /     \
+| () () |
+ \  ^  /
+  |||||
+  |||||
+</span>
 </pre>
