New minimalistic site design

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
     }
 </style>
-<pre>Idk what I should write here but you can check my <a target="_blank" href="g">Github</a> or contact me on <a target="_blank" href="t">Telegram</a> or Discord (MrNereof#3953)<span id="image-big">
+<pre>Idk what I should write here but you can check my <a target="_blank" href="g">Github</a> or contact me on <a target="_blank" href="t">Telegram</a> or Discord (MrNereof#888<span id="image-big">
 ............
 ............
 .............      .';coddddoc;.
